--- a/packages/emotion/package.json
+++ b/packages/emotion/package.json
@@ -38,6 +38,7 @@
     "@fullcss/core": "*"
   },
   "devDependencies": {
+    "@emotion/react": "^11.10.6",
     "@fullcss/babel": "*",
     "@fullcss/eslint": "*",
     "@fullcss/rollup": "*",
@@ -52,6 +53,7 @@
     "typescript": "^4.9.3"
   },
   "peerDependencies": {
+    "@emotion/react": "^11.10.6",
     "react": "^16.8 || ^17 || ^18"
   },
   "publishConfig": {
