--- a/packages/styled-components/package.json
+++ b/packages/styled-components/package.json
@@ -45,14 +45,17 @@
     "@types/node": "^18.11.9",
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.9",
+    "@types/styled-components": "^5.1.26",
     "eslint": "^8.33.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "rollup": "^3.5.1",
+    "styled-components": "^5.3.6",
     "typescript": "^4.9.3"
   },
   "peerDependencies": {
-    "react": "^16.8 || ^17 || ^18"
+    "react": "^16.8 || ^17 || ^18",
+    "styled-components": "^5.3.6"
   },
   "publishConfig": {
     "access": "public",
