chore(websites): update examples

--- a/packages/styled-components/package.json
+++ b/packages/styled-components/package.json
@@ -39,6 +39,7 @@
   },
   "devDependencies": {
     "@fullcss/babel": "*",
+    "@fullcss/core": "*",
     "@fullcss/eslint": "*",
     "@fullcss/rollup": "*",
     "@fullcss/tsconfig": "*",
