--- a/packages/emotion/package.json
+++ b/packages/emotion/package.json
@@ -40,6 +40,7 @@
   "devDependencies": {
     "@emotion/react": "^11.10.6",
     "@fullcss/babel": "*",
+    "@fullcss/core": "*",
     "@fullcss/eslint": "*",
     "@fullcss/rollup": "*",
     "@fullcss/tsconfig": "*",
