--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -7,9 +7,12 @@ react-query:
 websites/docs:
   - websites/docs/*
   - websites/docs/**/*
-visualization:
-  - websites/visualization/*
-  - websites/visualization/**/*
+websites/emotion:
+  - websites/emotion/*
+  - websites/emotion/**/*
+websites/styled-components:
+  - websites/styled-components/*
+  - websites/styled-components/**/*
 babel:
   - configs/babel/*
   - configs/babel/**/*
