chore: rename to jsxcss

--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -2,7 +2,7 @@
   "$schema": "https://unpkg.com/@changesets/config@2.3.0/schema.json",
   "changelog": false,
   "commit": false,
-  "fixed": [["@fullcss/core", "@fullcss/emotion", "@fullcss/styled-components"]],
+  "fixed": [["@jsxcss/core", "@jsxcss/emotion", "@jsxcss/styled-components"]],
   "linked": [],
   "access": "restricted",
   "baseBranch": "main",
