--- a/websites/emotion/tsconfig.json
+++ b/websites/emotion/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "extends": "@fullcss/tsconfig/nextjs.json",
+  "extends": "@jsxcss/tsconfig/nextjs.json",
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
   "exclude": ["node_modules"],
   "compilerOptions": {
