--- a/packages/styled-components/package.json
+++ b/packages/styled-components/package.json
@@ -1,15 +1,15 @@
 {
-  "name": "@fullcss/styled-components",
+  "name": "@jsxcss/styled-components",
   "version": "0.0.1",
   "keywords": [
-    "fullcss",
+    "jsxcss",
     "react"
   ],
-  "homepage": "https://docs.fullcss.org",
-  "bugs": "https://github.com/fullcss/react/issues",
+  "homepage": "https://docs.jsxcss.org",
+  "bugs": "https://github.com/jsxcss/react/issues",
   "repository": {
     "type": "git",
-    "url": "https://github.com/fullcss/react.git",
+    "url": "https://github.com/jsxcss/react.git",
     "directory": "packages/react"
   },
   "license": "MIT",
@@ -35,14 +35,14 @@
     "type:check": "tsc --noEmit"
   },
   "dependencies": {
-    "@fullcss/core": "*"
+    "@jsxcss/core": "*"
   },
   "devDependencies": {
-    "@fullcss/babel": "*",
-    "@fullcss/core": "*",
-    "@fullcss/eslint": "*",
-    "@fullcss/rollup": "*",
-    "@fullcss/tsconfig": "*",
+    "@jsxcss/babel": "*",
+    "@jsxcss/core": "*",
+    "@jsxcss/eslint": "*",
+    "@jsxcss/rollup": "*",
+    "@jsxcss/tsconfig": "*",
     "@types/node": "^18.11.9",
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.9",
