--- a/websites/styled-components/package.json
+++ b/websites/styled-components/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@fullcss/test-styled-components",
+  "name": "@jsxcss/test-styled-components",
   "private": true,
   "scripts": {
     "build": "next build",
@@ -7,7 +7,7 @@
     "start": "next start"
   },
   "dependencies": {
-    "@fullcss/styled-components": "*",
+    "@jsxcss/styled-components": "*",
     "axios": "^1.2.0",
     "framer-motion": "^9.0.7",
     "next": "^13.1.6",
@@ -17,8 +17,8 @@
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
-    "@fullcss/eslint": "*",
-    "@fullcss/tsconfig": "*",
+    "@jsxcss/eslint": "*",
+    "@jsxcss/tsconfig": "*",
     "@types/node": "^17.0.12",
     "@types/react": "^18.0.22",
     "@types/react-dom": "^18.0.7",
