--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -6,7 +6,7 @@
     "jsxcss",
     "react"
   ],
-  "homepage": "https://docs.jsxcss.org",
+  "homepage": "https://jsxcss.org",
   "bugs": "https://github.com/jsxcss/react/issues",
   "repository": {
     "type": "git",
