--- a/websites/emotion/package.json
+++ b/websites/emotion/package.json
@@ -24,6 +24,6 @@
     "@types/react-dom": "^18.0.7",
     "eslint": "7.32.0",
     "eslint-config-next": "^13.1.2",
-    "typescript": "4.8.3"
+    "typescript": "^4.9.5"
   }
 }
