--- a/websites/styled-components/package.json
+++ b/websites/styled-components/package.json
@@ -25,6 +25,6 @@
     "@types/styled-components": "^5.1.26",
     "eslint": "7.32.0",
     "eslint-config-next": "^13.1.2",
-    "typescript": "4.8.3"
+    "typescript": "^4.9.5"
   }
 }
