--- a/packages/styled-components/package.json
+++ b/packages/styled-components/package.json
@@ -47,6 +47,7 @@
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.9",
     "@types/styled-components": "^5.1.26",
+    "babel-plugin-styled-components": "^2.0.7",
     "eslint": "^8.33.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
