--- a/configs/rollup/package.json
+++ b/configs/rollup/package.json
@@ -14,8 +14,8 @@
     "builtin-modules": "^3.3.0"
   },
   "devDependencies": {
-    "rollup": "^3.5.1",
-    "@jsxcss/eslint": "*"
+    "@jsxcss/eslint": "*",
+    "rollup": "^3.5.1"
   },
   "peerDependencies": {
     "rollup": "^3"
