feat(devtool): add AutoLayoutDevtool

--- a/turbo.json
+++ b/turbo.json
@@ -15,9 +15,11 @@
       "outputs": []
     },
     "dev": {
+      "dependsOn": ["^build"],
       "cache": false
     },
     "dev:ko": {
+      "dependsOn": ["^build"],
       "cache": false
     },
     "type:check": {}
