--- a/websites/emotion/package.json
+++ b/websites/emotion/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@emotion/react": "^11.10.6",
+    "@jsxcss/devtool": "*",
     "@jsxcss/emotion": "*",
     "axios": "^1.2.0",
     "framer-motion": "^9.0.7",
