--- a/packages/emotion/package.json
+++ b/packages/emotion/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jsxcss/emotion",
-  "version": "0.4.0",
+  "version": "0.4.1",
   "keywords": [
     "jsxcss",
     "react"
@@ -35,7 +35,7 @@
     "type:check": "tsc --noEmit"
   },
   "dependencies": {
-    "@jsxcss/core": "0.4.0"
+    "@jsxcss/core": "0.4.1"
   },
   "devDependencies": {
     "@emotion/babel-preset-css-prop": "^11.10.0",
@@ -54,7 +54,7 @@
     "typescript": "^4.9.5"
   },
   "peerDependencies": {
-    "@emotion/react": "^11.10.6",
+    "@emotion/react": "*",
     "react": "^16.8 || ^17 || ^18"
   },
   "publishConfig": {
