--- a/packages/styled-components/package.json
+++ b/packages/styled-components/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jsxcss/styled-components",
-  "version": "0.4.0",
+  "version": "0.4.1",
   "keywords": [
     "jsxcss",
     "react"
@@ -35,7 +35,7 @@
     "type:check": "tsc --noEmit"
   },
   "dependencies": {
-    "@jsxcss/core": "0.4.0"
+    "@jsxcss/core": "0.4.1"
   },
   "devDependencies": {
     "@jsxcss/babel": "*",
@@ -56,7 +56,7 @@
   },
   "peerDependencies": {
     "react": "^16.8 || ^17 || ^18",
-    "styled-components": "^5.3.6"
+    "styled-components": ">= 4"
   },
   "publishConfig": {
     "access": "public",
