--- a/websites/emotion/package.json
+++ b/websites/emotion/package.json
@@ -8,8 +8,8 @@
   },
   "dependencies": {
     "@emotion/react": "^11.10.6",
-    "@jsxcss/devtool": "*",
-    "@jsxcss/emotion": "*",
+    "@jsxcss/devtool": "workspace:0.4.1",
+    "@jsxcss/emotion": "workspace:0.4.1",
     "axios": "^1.2.0",
     "framer-motion": "^9.0.7",
     "next": "^13.1.6",
@@ -18,8 +18,8 @@
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
-    "@jsxcss/eslint": "*",
-    "@jsxcss/tsconfig": "*",
+    "@jsxcss/eslint": "workspace:*",
+    "@jsxcss/tsconfig": "workspace:*",
     "@types/node": "^17.0.12",
     "@types/react": "^18.0.22",
     "@types/react-dom": "^18.0.7",
