--- a/.github/workflows/ci-workflow.yml
+++ b/.github/workflows/ci-workflow.yml
@@ -1,4 +1,4 @@
-name: "Continuous Integration"
+name: ci-workflow
 
 on:
   pull_request:
@@ -6,16 +6,31 @@ on:
 
 jobs:
   quality:
-    name: "CI: Check quality"
+    name: Check quality
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
 
       - name: Install pnpm
-        run: npm install -g pnpm
+        uses: pnpm/action-setup@v2.2.4
+        with:
+          version: 8
+
+      - name: Read .nvmrc
+        run: echo "##[set-output name=NVMRC;]$(cat .nvmrc)"
+        id: nvm
+
+      - name: Setup Node
+        uses: actions/setup-node@v3
+        with:
+          node-version: ${{ steps.nvm.outputs.NVMRC }}
+          check-latest: true
 
       - name: Install dependencies
         run: pnpm install
+
+      - name: Build core packages
+        run: pnpm build --filter=@jsxcss/core --filter=@jsxcss/emotion
 
       - name: Check typescript
         run: pnpm type:check
