--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -35,10 +35,10 @@
     "type:check": "tsc --noEmit"
   },
   "devDependencies": {
-    "@jsxcss/babel": "*",
-    "@jsxcss/eslint": "*",
-    "@jsxcss/rollup": "*",
-    "@jsxcss/tsconfig": "*",
+    "@jsxcss/babel": "workspace:*",
+    "@jsxcss/eslint": "workspace:*",
+    "@jsxcss/rollup": "workspace:*",
+    "@jsxcss/tsconfig": "workspace:*",
     "@types/node": "^18.11.9",
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.9",
