--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -2,7 +2,7 @@
   "$schema": "https://unpkg.com/@changesets/config@2.3.0/schema.json",
   "changelog": "@changesets/cli/changelog",
   "commit": false,
-  "fixed": [["@jsxcss/core", "@jsxcss/emotion"]],
+  "fixed": [["@jsxcss/core", "@jsxcss/emotion", "@jsxcss/devtool"]],
   "linked": [],
   "access": "restricted",
   "baseBranch": "main",
