--- a/.github/workflows/release-workflow.yml
+++ b/.github/workflows/release-workflow.yml
@@ -43,7 +43,7 @@ jobs:
           setupGitUser: false
           title: 'chore(changesets): bump packages version'
           commit: 'chore: bump packages version'
-          version: node .github/changeset-version.js
+          version: pnpm changeset:version
           publish: pnpm npm:publish
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
