--- a/websites/emotion/package.json
+++ b/websites/emotion/package.json
@@ -8,8 +8,8 @@
   },
   "dependencies": {
     "@emotion/react": "^11.10.6",
-    "@jsxcss/devtool": "workspace:1.0.0",
-    "@jsxcss/emotion": "workspace:1.0.0",
+    "@jsxcss/devtool": "workspace:1.1.0",
+    "@jsxcss/emotion": "workspace:1.1.0",
     "axios": "^1.2.0",
     "framer-motion": "^9.0.7",
     "next": "^13.1.6",
@@ -26,5 +26,6 @@
     "eslint": "7.32.0",
     "eslint-config-next": "^13.1.2",
     "typescript": "^4.9.5"
-  }
+  },
+  "version": null
 }
