--- a/websites/emotion/package.json
+++ b/websites/emotion/package.json
@@ -8,7 +8,7 @@
   },
   "dependencies": {
     "@emotion/react": "^11.10.6",
-    "@jsxcss/emotion": "workspace:1.2.0",
+    "@jsxcss/emotion": "workspace:1.3.0",
     "axios": "^1.2.0",
     "framer-motion": "^9.0.7",
     "next": "^13.1.6",
@@ -25,5 +25,6 @@
     "eslint": "7.32.0",
     "eslint-config-next": "^13.1.2",
     "typescript": "^4.9.5"
-  }
+  },
+  "version": null
 }
