--- a/packages/emotion/package.json
+++ b/packages/emotion/package.json
@@ -21,7 +21,8 @@
     },
     "./package.json": "./package.json"
   },
-  "main": "./src/index.ts",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "files": [
     "dist",
     "esm"
