--- a/websites/emotion/package.json
+++ b/websites/emotion/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@emotion/react": "^11.10.6",
     "@jsxcss/emotion": "workspace:1.3.2",
+    "@react-spring/web": "^9.7.2",
     "axios": "^1.2.0",
     "framer-motion": "^9.0.7",
     "next": "^13.1.6",
