--- a/websites/emotion/package.json
+++ b/websites/emotion/package.json
@@ -4,6 +4,7 @@
   "scripts": {
     "build": "next build",
     "dev": "next dev --port 3001",
+    "lint": "next lint",
     "start": "next start"
   },
   "dependencies": {
