--- a/websites/emotion/package.json
+++ b/websites/emotion/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.11.0",
     "@jsxcss/emotion": "workspace:1.3.2",
     "@react-spring/web": "^9.7.2",
     "axios": "^1.2.0",
