--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -28,7 +28,7 @@
   ],
   "scripts": {
     "build": "rm -rf dist esm && tsc -p tsconfig.json --declaration --emitDeclarationOnly --declarationDir dist && rollup -c rollup.config.js",
-    "lint": "eslint .",
+    "lint": "eslint \"**/*.ts*\"",
     "npm:publish": "pnpm publish",
     "prepack": "pnpm build",
     "test": "echo \"Error: no test specified\"",
@@ -36,7 +36,7 @@
   },
   "devDependencies": {
     "@jsxcss/babel": "workspace:*",
-    "@jsxcss/eslint": "workspace:*",
+    "@jsxcss/eslint-config": "workspace:*",
     "@jsxcss/rollup": "workspace:*",
     "@jsxcss/tsconfig": "workspace:*",
     "@types/node": "^18.11.9",
