--- a/websites/emotion/package.json
+++ b/websites/emotion/package.json
@@ -1,5 +1,6 @@
 {
   "name": "@jsxcss/emotion-test",
+  "version": "0.0.0",
   "private": true,
   "scripts": {
     "build": "next build",
@@ -28,6 +29,5 @@
     "eslint": "7.32.0",
     "eslint-config-next": "^13.1.2",
     "typescript": "^4.9.5"
-  },
-  "version": null
+  }
 }
