ci(.github/workflow): use changeset publish

--- a/package.json
+++ b/package.json
@@ -23,12 +23,14 @@
     "build": "turbo run build",
     "build:core": "turbo run build --filter=@jsxcss/core --filter=@jsxcss/emotion",
     "changeset": "changeset",
+    "changeset:publish": "changeset publish",
     "changeset:version": "changeset version && pnpm i --lockfile-only",
     "commit": "cz",
     "dev": "turbo run dev --parallel",
     "dev:ko": "turbo run dev:ko --scope='@jsxcss/docs'",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
-    "graph": "turbo run build --graph=graph/index.html",
+    "graph": "mkdir graph && turbo run build --graph",
+    "graph:png": "turbo run build --graph=graph.svg",
     "lint": "turbo run lint",
     "lint:pack": "packlint sort -R",
     "npm:publish": "turbo run npm:publish",
